fix: to styling for enquire-now page on smaller screens

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -210,6 +210,9 @@
   .enquire-now-heading {
     font-size: clamp(1.25rem, 1.25vw + 0.5rem, 5rem) !important;
   }
+  .see-more-reviews-link {
+    font-size: clamp(0.75rem, 0.3vw + 0.5rem, 5rem) !important;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -236,5 +239,8 @@
   }
   .enquire-now-heading {
     font-size: 1.25rem !important;
+  }
+  .see-more-reviews-link {
+    font-size: 0.75rem !important;
   }
 }
